# Travel-Bot

./: .gitignore  AGENTS.md  README.md  package-lock.json  pyproject.toml
api/tools/: booking_client.py  flight_scraper.py
app/: layout.tsx
backend/: README.md  agent_dependencies.py  pyproject.toml  server.py  travel_agent.py
backend/agents/: agent.py  graph.py  messages_state.py  model.py  model_node.py  tool_node.py
backend/docs/: AGENT_IMPLEMENTATION.md  BACKEND_INTEGRATION.md  PROJECT_ORGANIZATION.md
backend/tests/: conftest.py  example_usage.py  test_agent.py  test_integration.py  test_server.py  test_travel_agent.py
backend/tools/: flight_scraper.py  hotel_scraper.py  web_scraper.py
cli/: app.py  example_trip.md
cli/components/: ChatInterface.py
cli/helpers/: mock_stream.py
cli/styles/: styles.tcss
frontend/: package-lock.json  package.json
frontend/__tests__/: ItineraryDisplay.test.tsx
frontend/app/: globals.css  page.tsx
frontend/components/: ChatInput.tsx  ChatUI.tsx  ItineraryDisplay.tsx  MessageList.tsx  ThinkingDots.tsx
frontend/types/: Message.tsx
