[project]
name = "travel-bot"
version = "0.1.0"
description = "Your personal AI Travel Planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.4",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.1",
]
