[project]
name = "travel-bot"
version = "0.1.0"
description = "Your personal AI Travel Planner"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.1",
]
